amend some format for osint

--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@ PUB, Singapore's National Water Agency</a></span>
     <section id="skills" class="section scrollspy">
       <h3 class="page-title white-text teal">Skills</h3>
       <div class="container">
-        <!-- Languages and Databases -->
+        <!-- Languages -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Languages</h4>
+            <h4 class="brown-text light">💻 Languages</h4>
             <div class="row text-center">
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
@@ -362,7 +362,7 @@ PUB, Singapore's National Water Agency</a></span>
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
-                        
+             </div>           
             </div>
           </div>
         </div>
@@ -373,7 +373,7 @@ PUB, Singapore's National Water Agency</a></span>
         <h4 class="brown-text light">🔍 OSINT</h4>
         <div class="row text-center">
           <div class="col s4 m2"><img src="/assets/img/Shodan.png" class="responsive-img"><p>Shodan</p></div>
-          <div class="col s4 m2"><img src="/assets/img/Maltego.jpeg" class="responsive-img"><p>Maltego</p></div>
+          <div class="col s4 m2"><img src="/assets/img/Maltego.jpg" class="responsive-img"><p>Maltego</p></div>
           <div class="col s4 m2"><img src="/assets/img/recon-ng.png" class="responsive-img"><p>Recon-ng</p></div> 
           <div class="col s4 m2"><img src="/assets/img/virustotal_logo.jpg" class="responsive-img"><p>VirusTotal</p></div>
           <div class="col s4 m2"><img src="/assets/img/sublist3r.png" class="responsive-img"><p>Sublist3r</p></div>
