--- a/index.html
+++ b/index.html
@@ -372,11 +372,11 @@ PUB, Singapore's National Water Agency</a></span>
       <div class="card-content">
         <h4 class="brown-text light">🔍 OSINT</h4>
         <div class="row text-center">
-          <div class="col s4 m2"><img src="/assets/img/Shodan.png" class="responsive-img"><p>Shodan</p></div>
-          <div class="col s4 m2"><img src="/assets/img/Maltego.jpg" class="responsive-img"><p>Maltego</p></div>
-          <div class="col s4 m2"><img src="/assets/img/recon-ng.png" class="responsive-img"><p>Recon-ng</p></div> 
-          <div class="col s4 m2"><img src="/assets/img/virustotal_logo.jpg" class="responsive-img"><p>VirusTotal</p></div>
-          <div class="col s4 m2"><img src="/assets/img/sublist3r.png" class="responsive-img"><p>Sublist3r</p></div>
+          <div class="col s4 m2"><img src="/assets/img/Shodan.png" class="responsive-img">Shodan</div>
+          <div class="col s4 m2"><img src="/assets/img/Maltego.jpg" class="responsive-img">Maltego</div>
+          <div class="col s4 m2"><img src="/assets/img/recon-ng.png" class="responsive-img">Recon-ng</div> 
+          <div class="col s4 m2"><img src="/assets/img/virustotal_logo.jpg" class="responsive-img"VirusTotal</div>
+          <div class="col s4 m2"><img src="/assets/img/sublist3r.png" class="responsive-img">Sublist3r</div>
         </div>
       </div>
     </div>
