--- a/index.html
+++ b/index.html
@@ -381,6 +381,20 @@ PUB, Singapore's National Water Agency</a></span>
       </div>
     </div>
 
+    <!-- Web Security -->
+    <div class="card">
+      <div class="card-content">
+        <h4 class="brown-text light">🌐 Web Security</h4>
+        <div class="row text-center">
+          <div class="col s4 m2"><img src="/assets/img/burp.png" class="responsive-img"><p>Burp Suite</p></div>
+          <div class="col s4 m2"><img src="/assets/img/zap.jpeg" class="responsive-img"><p>OWASP ZAP</p></div>
+          <div class="col s4 m2"><img src="/assets/img/gobuster.jpeg" class="responsive-img"><p>Gobuster</p></div>
+          <div class="col s4 m2"><img src="/assets/img/postman.png" class="responsive-img"><p>Postman</p></div>
+          <div class="col s4 m2"><img src="/assets/img/beef.png" class="responsive-img"><p>BeEF</p></div>
+        </div>
+      </div>
+    </div>
+
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Libraries</h4>
