--- a/index.html
+++ b/index.html
@@ -401,11 +401,11 @@ PUB, Singapore's National Water Agency</a></span>
         <h4 class="brown-text light">📡 Network Analysis</h4>
         <div class="row text-center">
           <div class="col s4 m2"><img src="/assets/img/nmap.png" class="responsive-img"><p>Nmap</p></div>
-          <div class="col s4 m2"><img src="/assets/img/wireshark.png" class="responsive-img"><p>Wireshark</p></div>
+          <div class="col s4 m2"><img src="/assets/img/wireshark.jpg" class="responsive-img"><p>Wireshark</p></div>
           <div class="col s4 m2"><img src="/assets/img/scapy.png" class="responsive-img"><p>Scapy</p></div>
           <div class="col s4 m2"><img src="/assets/img/zeek.png" class="responsive-img"><p>Zeek</p></div>
           <div class="col s4 m2"><img src="/assets/img/snort.png" class="responsive-img"><p>Snort</p></div>
-         <!-- <div class="col s4 m2"><img src="/assets/img/tcpdump.png" class="responsive-img"><p>tcpdump</p></div> -->
+         <div class="col s4 m2"><img src="/assets/img/tcpdump.png" class="responsive-img"><p>tcpdump</p></div>
         </div>
       </div>
     </div>
