update forens skills

--- a/index.html
+++ b/index.html
@@ -410,6 +410,19 @@ PUB, Singapore's National Water Agency</a></span>
       </div>
     </div>
 
+    <!-- Digital Forensics -->
+    <div class="card">
+      <div class="card-content">
+        <h4 class="brown-text light">🕵️ Digital Forensics</h4>
+        <div class="row text-center">
+          <div class="col s4 m2"><img src="/assets/img/autopsy.jpg" class="responsive-img"><p>Autopsy</p></div>
+          <div class="col s4 m2"><img src="/assets/img/volatility.png" class="responsive-img"><p>Volatility</p></div>
+          <div class="col s4 m2"><img src="/assets/img/FTK.png" class="responsive-img"><p>FTK Imager</p></div>
+          <div class="col s4 m2"><img src="/assets/img/binwalk.jpg" class="responsive-img"><p>Binwalk</p></div>
+  <div class="col s4 m2"><img src="/assets/img/kape.png" class="responsive-img"><p>KAPE</p></div>
+        </div>
+      </div>
+    </div>
 
         <div class="card">
           <div class="card-content">
