modify crypto skill

--- a/index.html
+++ b/index.html
@@ -429,11 +429,11 @@ PUB, Singapore's National Water Agency</a></span>
       <div class="card-content">
         <h4 class="brown-text light">🔐 Cryptography</h4>
         <div class="row text-center">
-          <div class="col s4 m2"><img src="/assets/img/cyberchef.png" class="responsive-img"><p>CyberChef</p></div>
+          <div class="col s4 m3"><img src="/assets/img/cyberchef.png" class="responsive-img"><p>CyberChef</p></div>
           <div class="col s4 m2"><img src="/assets/img/dcode.png" class="responsive-img"><p>dCode</p></div>
           <div class="col s4 m2"><img src="/assets/img/gpg.png" class="responsive-img"><p>GPG</p></div>
-          <div class="col s4 m2"><img src="/assets/img/quipquip.png" class="responsive-img"></div>
-<div class="col s4 m2"><img src="/assets/img/sagemath.png" class="responsive-img">Sage</div>
+          <div class="col s4 m2"><img src="/assets/img/quipquip.png" class="responsive-img">quipquip</div>
+<div class="col s4 m2"><img src="/assets/img/sage.png" class="responsive-img">Sage</div>
 
         </div>
       </div>
