update RE skills

--- a/index.html
+++ b/index.html
@@ -439,6 +439,22 @@ PUB, Singapore's National Water Agency</a></span>
       </div>
     </div>
 
+    <!-- Reverse Engineering -->
+    <div class="card">
+      <div class="card-content">
+        <h4 class="brown-text light">🧬 Reverse Engineering</h4>
+        <div class="row text-center">
+          <div class="col s4 m2"><img src="/assets/img/ida.png" class="responsive-img"><p>IDA Free</p></div>
+          <div class="col s4 m2"><img src="/assets/img/apktool.png" class="responsive-img"><p>Apktool</p></div>
+          <div class="col s4 m2"><img src="/assets/img/gdb.png" class="responsive-img"><p>GDB</p></div>
+ <div class="col s4 m2"><img src="/assets/img/remnux.png" class="responsive-img"><p>REMnux</p></div>
+ <div class="col s4 m2"><img src="/assets/img/cuckoo.png" class="responsive-img"><p>Cuckoo</p></div>
+         <!-- <div class="col s4 m2"><img src="/assets/img/yara.png" class="responsive-img"><p>YARA</p></div> -->
+        </div>
+      </div>
+    </div>
+
+
 
         <div class="card">
           <div class="card-content">
