update SIEM skills

--- a/index.html
+++ b/index.html
@@ -454,6 +454,19 @@ PUB, Singapore's National Water Agency</a></span>
       </div>
     </div>
 
+    <!-- SIEM & Threat Hunting -->
+    <div class="card">
+      <div class="card-content">
+        <h4 class="brown-text light">📊 SIEM, Threat Hunting & Vulnerability Analysis</h4>
+        <div class="row text-center">
+          <div class="col s4 m2"><img src="/assets/img/splunk.jpg" class="responsive-img"><p>Splunk</p></div>
+          <div class="col s4 m2"><img src="/assets/img/elk.png" class="responsive-img"><p>ELK Stack</p></div>
+          <div class="col s4 m2"><img src="/assets/img/arkime.jpg" class="responsive-img"><p>Arkime</p></div>
+          <div class="col s4 m2"><img src="/assets/img/nessus.png" class="responsive-img"><p>Nessus</p></div>
+<div class="col s4 m2"><img src="/assets/img/sysmon.jpg" class="responsive-img"><p>Sysmon</p></div>
+        </div>
+      </div>
+    </div>
 
 
         <div class="card">
