update container skills

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ PUB, Singapore's National Water Agency</a></span>
 
  <li>
 <b>Tools and Frameworks:</b> <br>
-<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint, Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
+<strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
 <strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, GenAI, CO-STAR, Power Automate, Plumber<br>
 <strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain <br>
 <strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs <br>
@@ -479,6 +479,19 @@ PUB, Singapore's National Water Agency</a></span>
           <div class="col s4 m2"><img src="/assets/img/nist.png" class="responsive-img"><p>NIST CSF</p></div>
           <div class="col s4 m2"><img src="/assets/img/owasp.png" class="responsive-img"><p>OWASP Top 10</p></div>
   <div class="col s4 m2"><img src="/assets/img/pop.jpg" class="responsive-img"><p>Pyramid of Pain</p></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- DevSecOps -->
+    <div class="card">
+      <div class="card-content">
+        <h4 class="brown-text light">🛠️ DevSecOps & Containers</h4>
+        <div class="row text-center">
+          <div class="col s4 m2"><img src="/assets/img/docker.png" class="responsive-img"><p>Docker</p></div>
+          <div class="col s4 m2"><img src="/assets/img/sonarqube.png" class="responsive-img"><p>SonarQube</p></div>
+          <div class="col s4 m2"><img src="/assets/img/checkmarx.png" class="responsive-img"><p>Checkmarx</p></div>
+          <div class="col s4 m2"><img src="/assets/img/snyk.png" class="responsive-img"><p>Snyk</p></div>
         </div>
       </div>
     </div>
