--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ PUB, Singapore's National Water Agency</a></span>
         <!-- Languages -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">💻 Languages</h4>
+            <h4 class="brown-text light">🧑‍💻 Languages</h4>
             <div class="row text-center">
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
@@ -447,8 +447,8 @@ PUB, Singapore's National Water Agency</a></span>
           <div class="col s4 m2"><img src="/assets/img/ida.png" class="responsive-img"><p>IDA Free</p></div>
           <div class="col s4 m2"><img src="/assets/img/apktool.png" class="responsive-img"><p>Apktool</p></div>
           <div class="col s4 m2"><img src="/assets/img/gdb.png" class="responsive-img"><p>GDB</p></div>
- <div class="col s4 m2"><img src="/assets/img/remnux.png" class="responsive-img"><p>REMnux</p></div>
- <div class="col s4 m2"><img src="/assets/img/cuckoo.png" class="responsive-img"><p>Cuckoo</p></div>
+<div class="col s4 m2"><img src="/assets/img/x64dbg.png" class="responsive-img"><p>x64dbg</p></div>
+      <div class="col s4 m2"><img src="/assets/img/cutter.png" class="responsive-img"><p>Cutter</p></div>
          <!-- <div class="col s4 m2"><img src="/assets/img/yara.png" class="responsive-img"><p>YARA</p></div> -->
         </div>
       </div>
@@ -496,55 +496,21 @@ PUB, Singapore's National Water Agency</a></span>
       </div>
     </div>
 
-        <div class="card">
-          <div class="card-content">
-            <h4 class="brown-text light">Libraries</h4>
-            <div class="row text-center">
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
-              </div>
-            </div>
-          </div>
-        </div>
 
-        <!-- Frameworks -->
-        <div class="card">
-          <div class="card-content">
-            <h4 class="brown-text light">Frameworks</h4>
-            <div class="row text-center">
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
-              </div>
-            </div>
-          </div>
+ <!-- Workstations & Environments -->
+    <div class="card">
+      <div class="card-content">
+        <h4 class="brown-text light">💻 Workstations & Environments</h4>
+        <div class="row text-center">
+ <div class="col s4 m2"><img src="/assets/img/vmware.png" class="responsive-img"><p>VMware</p></div>
+      <div class="col s4 m2"><img src="/assets/img/kali.png" class="responsive-img"><p>Kali Linux</p></div>
+      <div class="col s4 m2"><img src="/assets/img/sift.png" class="responsive-img"></div>
+      <div class="col s4 m2"><img src="/assets/img/flarevm.jpg" class="responsive-img"><p>FlareVM</p></div>
+      <div class="col s4 m2"><img src="/assets/img/remnux.png" class="responsive-img"><p>REMnux</p></div>
+      <div class="col s4 m2"><img src="/assets/img/cuckoo.png" class="responsive-img"><p>Cuckoo</p></div>
         </div>
+      </div>
+    </div>
 
         <!-- Other -->
         <div class="card">
@@ -564,6 +530,7 @@ PUB, Singapore's National Water Agency</a></span>
               </div>
             </div>
           </div>
+
         </div>
     </section>
 
