add in cloud skills and other skills

--- a/index.html
+++ b/index.html
@@ -490,12 +490,27 @@ PUB, Singapore's National Water Agency</a></span>
         <div class="row text-center">
           <div class="col s4 m2"><img src="/assets/img/docker.png" class="responsive-img"><p>Docker</p></div>
           <div class="col s4 m2"><img src="/assets/img/sonarqube.png" class="responsive-img"><p>SonarQube</p></div>
-          <div class="col s4 m2"><img src="/assets/img/checkmarx.png" class="responsive-img"><p>Checkmarx</p></div>
+          <div class="col s4 m3"><img src="/assets/img/checkmarx.png" class="responsive-img"><p>Checkmarx</p></div>
           <div class="col s4 m2"><img src="/assets/img/snyk.png" class="responsive-img"><p>Snyk</p></div>
         </div>
       </div>
     </div>
 
+<!-- Government Cloud -->
+<div class="card">
+  <div class="card-content">
+    <h4 class="brown-text light">☁️ Government Commercial Cloud (Singapore)</h4>
+    <div class="row text-center">
+      <div class="col s6 m3"><img src="/assets/img/gcc.png" class="responsive-img"><p>GCC / GCC+</p></div>
+ <div class="col s6 m3"><img src="/assets/img/azure.png" class="responsive-img"><p>Azure</p></div>
+      <div class="col s6 m3"><img src="/assets/img/awscloud.png" class="responsive-img"><p>AWS</p></div>
+      <div class="col s6 m3"><img src="/assets/img/gcp.png" class="responsive-img"><p>GCP</p></div>
+    </div>
+    <p class="center grey-text" style="font-size: 0.9em; margin-top: 1rem;">
+      <em>Note: All listed commercial cloud service providers are approved under Singapore's GCC/GCC+ framework.</em>
+    </p>
+  </div>
+</div>
 
  <!-- Workstations & Environments -->
     <div class="card">
@@ -512,24 +527,12 @@ PUB, Singapore's National Water Agency</a></span>
       </div>
     </div>
 
-        <!-- Other -->
-        <div class="card">
-          <div class="card-content">
-            <h4 class="brown-text light">Other</h4>
-            <div class="row text-center">
+     <div class="center-align" style="margin-top: 20px;">
+  <a href="https://gadiel-lau.gitbook.io/tech-tools" target="_blank" rel="noopener" class="btn teal lighten-1">
+    View Full Skills/Toolset
+  </a>
+</div>
 
-
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
-              </div>
-            </div>
-          </div>
 
         </div>
     </section>
