update grad image

--- a/index.html
+++ b/index.html
@@ -908,6 +908,14 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
                 </a>
               </p>
             </div>
+   <!-- Optional Graduation Image (Screenshot from YouTube) -->
+        <div class="center-align" style="margin-top: 20px;">
+          <img src="/assets/img/grad-ceremony.jpg" alt="Graduation Ceremony Moment"
+            class="responsive-img z-depth-1 hoverable" style="max-width: 350px; border-radius: 8px;">
+          <p class="grey-text text-darken-1" style="margin-top: 5px;">
+            Captured on YouTube during the official graduation ceremony
+          </p>
+        </div>
           </div>
         </div>
       </div>
