add in some links for awards

--- a/index.html
+++ b/index.html
@@ -909,12 +909,14 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
               </p>
             </div>
    <!-- Optional Graduation Image (Screenshot from YouTube) -->
-        <div class="center-align" style="margin-top: 20px;">
-          <img src="/assets/img/grad-ceremony.jpg" alt="Graduation Ceremony Moment"
-            class="responsive-img z-depth-1 hoverable" style="max-width: 350px; border-radius: 8px;">
-          <p class="grey-text text-darken-1" style="margin-top: 5px;">
-            Captured on YouTube during the official graduation ceremony
-          </p>
+       <a href="/assets/img/grad-ceremony.jpg" target="_blank">
+  <img src="/assets/img/grad-ceremony.jpg" alt="Graduation Ceremony Moment"
+    class="responsive-img z-depth-1 hoverable" style="max-width: 350px; border-radius: 8px;">
+</a>
+<p class="grey-text text-darken-1" style="margin-top: 5px;">
+  View screen capture from YouTube
+</p>
+
         </div>
           </div>
         </div>
@@ -1018,6 +1020,16 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
                   View LinkedIn post &#8594;
                 </a>
               </p>
+<p style="font-size: 1rem;">
+                <a href="https://www.instagram.com/p/CdXMgXMtYTt/" target="_blank" class="teal-text text-darken-2">
+                  View Instagram post &#8594;
+                </a>
+              </p>
+<p style="font-size: 1rem;">
+                <a href="https://www.facebook.com/watch/?v=425901772698199" target="_blank" class="teal-text text-darken-2">
+                  View Facebook post &#8594;
+                </a>
+              </p>
             </div>
           </div>
         </div>
@@ -1059,6 +1071,13 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
                   View Facebook post &#8594;
                 </a>
               </p>
+
+<p style="font-size: 1rem;">
+                <a href="https://www.instagram.com/p/CZRUQ2zvT8y/" target="_blank" class="teal-text text-darken-2">
+                  View Instagram post &#8594;
+                </a>
+              </p>
+
               <p style="font-size: 1rem;">
                 <a href="https://www.aisp.sg/document/newsletter/AISP%20Newsletter%202022/AiSP_Newsletter_2022%20February.pdf" target="_blank" class="teal-text text-darken-2">
                   View AiSP Newsletter &#8594;
