update grad pic from youtube

--- a/index.html
+++ b/index.html
@@ -908,14 +908,11 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
                 </a>
               </p>
             </div>
-   <!-- Optional Graduation Image (Screenshot from YouTube) -->
-       <a href="/assets/img/grad-ceremony.jpg" target="_blank">
-  <img src="/assets/img/grad-ceremony.jpg" alt="Graduation Ceremony Moment"
-    class="responsive-img z-depth-1 hoverable" style="max-width: 350px; border-radius: 8px;">
-</a>
-<p class="grey-text text-darken-1" style="margin-top: 5px;">
-  View screen capture from YouTube
-</p>
+      <p style="font-size: 1rem;">
+            <a href="https://drive.google.com/file/d/1ngqhkNPj6f3M2Lg-O9zLzrtxUHoxDLBn/view?usp=sharing" target="_blank" class="teal-text text-darken-2">
+              View screen capture from YouTube &#8594;
+            </a>
+          </p>
 
         </div>
           </div>
