--- a/index.html
+++ b/index.html
@@ -907,10 +907,9 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
                   View official e-booklet &#8594;
                 </a>
               </p>
-            </div>
       <p style="font-size: 1rem;">
             <a href="https://drive.google.com/file/d/1ngqhkNPj6f3M2Lg-O9zLzrtxUHoxDLBn/view?usp=sharing" target="_blank" class="teal-text text-darken-2">
-              View screen capture from YouTube &#8594;
+              View screenshot taken from YouTube &#8594;
             </a>
           </p>
 
