--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
           </div>
         </div>
       </div>
-
+    </div>
     <!-- Row 2 -->
     <div class="row">
 
