amend github url  to  include https

--- a/index.html
+++ b/index.html
@@ -1105,11 +1105,11 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
               class="hoverline">gadiellaurz@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Gadiel on GitHub" href="http://github.com/glrz" target="_blank"
+          <a aria-label="View Gadiel on GitHub" href="https://www.github.com/glrz" target="_blank"
             data-position="top" data-tooltip="View Gadiel on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Gadiel on Github" href="http://github.com/glrz" class="hoverline"
-              target="_blank">github.com/glrz</a></a>
+              aria-label="Gadiel on Github" href="https://www.github.com/glrz" class="hoverline"
+              target="_blank">https://www.github.com/glrz</a></a>
         </p>
         <p>
           <a aria-label="View Gadiel on LinkedIn" href="https://www.linkedin.com/in/gadiellaurz/" target="_blank"
