amend desc and speed

--- a/index.html
+++ b/index.html
@@ -1126,10 +1126,10 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Cybersecurity Analyst", "Results-Oriented Problem Solver", "Driven. Analytical. Resilient.", "CTF Enthusiast"],
+      strings: ["Cybersecurity Analyst", "Results-Oriented Problem Solver", "Driven, Analytical, and Resilient Professional", "CTF Enthusiast"],
       loop: true,
-      typeSpeed: 80,
-      backSpeed: 40
+      typeSpeed: 100,
+      backSpeed: 80
     });
   </script>
 
