add in ehe cert

--- a/index.html
+++ b/index.html
@@ -665,6 +665,20 @@ PUB, Singapore's National Water Agency</a></span>
 <div class="col s12 m4 l4">
                     <div class="card">
                       <div class="card-image">
+                        <img src="/assets/img/ehe.jpg" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://codered.eccouncil.org/certificate/e0853f22-3c3d-4478-b66e-5bf66c525abe" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Ethical Hacking Essentials</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
                         <img src="/assets/img/Shopee.png" style="max-width: 100px; margin: auto; display: block;">
                       </div>
                       <div class="card-content">
@@ -693,8 +707,7 @@ PUB, Singapore's National Water Agency</a></span>
        <p class="grey-text text-darken-1" style="margin-top: 1rem; font-style: italic;">
   For all other certificates, please refer to <a href="https://drive.google.com/file/d/1h_jsf2oqJAGaiAHzIN5xzST9bsbgToJc/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>.
 </p>
-          
-                      </div>
+                                </div>
                     </div>
                   </div>
                 </div>
