add in more certs

--- a/index.html
+++ b/index.html
@@ -675,6 +675,32 @@ PUB, Singapore's National Water Agency</a></span>
                     </div>
                   </div>
 
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/nde.jpg" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://codered.eccouncil.org/certificate/5b0efcf9-28e2-4535-9ae1-37e5bbb6dfc7" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Network Defense Essentials</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/dfe.jpg" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://codered.eccouncil.org/certificate/fefe3bb9-d30f-4712-8ddb-fbf5863ab36d" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Digital Forensics Essentials</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
 
 <div class="col s12 m4 l4">
                     <div class="card">
