--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@ PUB, Singapore's National Water Agency</a></span>
                       </div>
                     </div>
                   </div>
+</div>
 
 
 <div class="col s12 m4 l4">
@@ -727,7 +728,7 @@ PUB, Singapore's National Water Agency</a></span>
                       </div>
                     </div>
                   </div>
- 
+ </div>
         <!-- Add this note below cards -->
        <p class="grey-text text-darken-1" style="margin-top: 1rem; font-style: italic;">
   For all other certificates, please refer to <a href="https://drive.google.com/file/d/1h_jsf2oqJAGaiAHzIN5xzST9bsbgToJc/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>.
