--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ PUB, Singapore's National Water Agency</a></span>
                   </div>
 
 
-<div class="col s12 m4 l4">
+<div class="col s12 m4 l4 offset-m2 offset-l2">
                     <div class="card">
                       <div class="card-image">
                         <img src="/assets/img/Shopee.png" style="max-width: 100px; margin: auto; display: block;">
@@ -716,7 +716,7 @@ PUB, Singapore's National Water Agency</a></span>
                   </div>
 
 
-<div class="col s12 m4 l4">
+<div class="col s12 m4 l4 ">
                     <div class="card">
                       <div class="card-image">
                         <img src="/assets/img/sincon.png" style="max-width: 100px; margin: auto; display: block;">
