--- a/index.html
+++ b/index.html
@@ -774,6 +774,7 @@ PUB, Singapore's National Water Agency</a></span>
               <li>Security & Risks Management</li>
               <li>Network Security</li>
 		<li>Forensics</li>
+<li>Security Monitoring & Threat Detection</li>
  <li>Privacy Preserving Technologies & Security in AI</li>
             </ul>
 		<p><b>Clubs & Societies:</b></p>
