test add in text

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ PUB, Singapore's National Water Agency</a></span>
         <div class="row text-center">
  <div class="col s4 m2"><img src="/assets/img/vmware.png" class="responsive-img"><p>VMware</p></div>
       <div class="col s4 m2"><img src="/assets/img/kali.png" class="responsive-img"><p>Kali Linux</p></div>
-      <div class="col s4 m2"><img src="/assets/img/sift.png" class="responsive-img"></div>
+      <div class="col s4 m2"><img src="/assets/img/sift.png" class="responsive-img">SIFT Workstation</div>
       <div class="col s4 m2"><img src="/assets/img/flarevm.jpg" class="responsive-img"><p>FlareVM</p></div>
       <div class="col s4 m2"><img src="/assets/img/remnux.png" class="responsive-img"><p>REMnux</p></div>
       <div class="col s4 m2"><img src="/assets/img/cuckoo.png" class="responsive-img"><p>Cuckoo</p></div>
