--- a/index.html
+++ b/index.html
@@ -244,16 +244,18 @@ PUB, Singapore's National Water Agency</a></span>
           </div>
              <ul>
       <li>Championed the development and implementation of PUB’s inaugural OT Cyber Supply Chain Risk Management policy; issued internal circular and designed an engaging awareness poster</li>
+      <li>Created Vulnerability Management System SOP using workflows and flowcharts to improve efficiency by 50%, with procedures for addressing issues and saving time for system managers</li>
 <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
       <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
       <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
       <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender and managed contract extensions for GovTech Vulnerability Management System</li>
       <li>Coordinated and scheduled over 100+ VAPT exercises across IT and OT systems; ensured timely remediation and validation of findings within IM8 timelines</li>
+<li>Created admin accounts under Computer Management for VAPT vendors on VAPT laptops to conduct secure testing</li>
       <li>Reviewed system go-live documentation including Vulnerability Assessments (VA), Penetration Tests (PT), Risk Assessments (RA), Security Configuration Reviews (SCR), hardening guides, BIA forms, and architecture diagrams</li>
       <li>Revised OT network diagrams using the Purdue Model to ensure proper segmentation and enhance ICS defense-in-depth</li>
       <li>Enhanced tracking and oversight of cyber risks, VAPT, and purple teaming findings across all systems using Excel dashboards</li>
       <li>Automated weekly VMS reminders with Plumber tool and real-time remediation updates via Power Automate</li>
-      <li>Created and maintained asset tags, vulnerability whitelist rules, and recast rules in GovTech VMS</li>
+      <li>Created and maintained asset tags, whitelist rules, and severity recast configurations in GovTech VMS</li>
       <li>Monitored cyber health status by updating Digital Governance Platform (DGP) records and tracking treatment plans</li>
       <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall to enable secure reachability to target environments.</li>
       <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
@@ -264,7 +266,7 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Conducted reviews of third-party VAPT reports (cloud VA, mobile PT, web PT, network PT), assessing findings derived from tools like Burp Suite, Wireshark, and Nessus</li>
       <li>Onboarded sensitive and internet-facing systems to GovTech VMS via askGovTech platform and raised cybersecurity inquiries</li>
 <li>Proactively identified cloud service resources in Microsoft Azure for Cloud VA and obtained system subscription information from Azure Portal resources for VMS onboarding process</li>
-      <li>Served as cybersecurity consultant to system managers, offering guidance across areas such as IM8, offshoring, third-party risk management, and audit regimes</li>
+      <li>Served as cybersecurity consultant to system managers and ITSO, offering guidance on IM8, offshoring, third-party risk, audits, system hardening, and architecture</li>
       <li>Reviewed all IT/OT hardening guides, aligned with CIS Benchmarks, and published updated versions on PUB intranet</li>
       <li>Researched and assessed Digital Rights Management solutions including Vitrium; developed user guides, use cases, and presented findings to Department Director</li>
     <!--  <li>Delivered AI and cybersecurity workflow optimization workshops to internal staff</li> -->
@@ -283,7 +285,7 @@ PUB, Singapore's National Water Agency</a></span>
 <strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance <br>
 <strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
 <strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium) <br>
-<strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, GeBiz <br>
+<strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GeBiz <br>
 <!-- <strong>Certifications:</strong> CompTIA Security+, CRISC, CISSP -->
 </li>
 </ul>
