--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@ PUB, Singapore's National Water Agency</a></span>
           </div>
              <ul>
       <li>Championed the development and implementation of PUB’s inaugural OT Cyber Supply Chain Risk Management policy; issued internal circular and designed an engaging awareness poster</li>
-      <li>Created Vulnerability Management System SOP using workflows and flowcharts to improve efficiency by 50%, with procedures for addressing issues and saving time for system managers</li>
+      <li>Created Vulnerability Management System SOP using workflows and flowcharts, improving operational efficiency by 50% and streamlining issue resolution for system managers</li>
 <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
       <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
       <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
-      <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender and managed contract extensions for GovTech Vulnerability Management System</li>
+      <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender by creating Approval of Requirements (AOR) and raising Purchase Orders (PO); also managed contract extensions for GovTech Vulnerability Management System</li>
       <li>Coordinated and scheduled over 100+ VAPT exercises across IT and OT systems; ensured timely remediation and validation of findings within IM8 timelines</li>
 <li>Created admin accounts under Computer Management for VAPT vendors on VAPT laptops to conduct secure testing</li>
       <li>Reviewed system go-live documentation including Vulnerability Assessments (VA), Penetration Tests (PT), Risk Assessments (RA), Security Configuration Reviews (SCR), hardening guides, BIA forms, and architecture diagrams</li>
@@ -257,7 +257,7 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Automated weekly VMS reminders with Plumber tool and real-time remediation updates via Power Automate</li>
       <li>Created and maintained asset tags, whitelist rules, and severity recast configurations in GovTech VMS</li>
       <li>Monitored cyber health status by updating Digital Governance Platform (DGP) records and tracking treatment plans</li>
-      <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall to enable secure reachability to target environments.</li>
+      <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall to enable secure reachability to target environments</li>
       <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
       <li>Tripled document analysis efficiency using CO-STAR framework and PairChat assistants to automate tasks such as email drafting, risk inquiries, and policy reviews</li>
       <li>Participated in purple team exercises; analyzed deployed TTPs and detections in Carbon Black EDR</li>
@@ -272,7 +272,7 @@ PUB, Singapore's National Water Agency</a></span>
     <!--  <li>Delivered AI and cybersecurity workflow optimization workshops to internal staff</li> -->
       <li>Attended cybersecurity events including CIDeX training 2024, CSA OTCEP Forum, and CyberArk Impact World Tour</li>
       <li>Tracked and managed spare VAPT laptops, facilitated tech refresh and supported procurement invoice processing</li>
-      <li>Collaborated with GovTech on Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP)</li>
+      <li>Collaborated closely with GovTech on the Crowdsourced Vulnerability Discovery Programme (CVDP) and Government Bug Bounty Programme (GBBP) to enhance PUB’s cybersecurity posture</li>
       <li>Continuously updated and optimized IT/OT specifications to ensure compliance with IM8 Reform and CCoP policies</li>
 
  <li>
