add in new tools in  skills

--- a/index.html
+++ b/index.html
@@ -278,13 +278,13 @@ PUB, Singapore's National Water Agency</a></span>
  <li>
 <b>Tools and Frameworks:</b> <br>
 <strong>Security Platforms:</strong> Microsoft Azure, Microsoft Sentinel, Microsoft Defender for Endpoint (MDE), Microsoft Intune, Symantec Endpoint Protection (SEP), Cortex XDR, Menlo Security<br>
-<strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, GenAI, CO-STAR, Power Automate, Plumber<br>
-<strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain <br>
+<strong>AI & Automation Tools:</strong> Agentic AI, PairChat, AiBots, Microsoft Copilot, GenAI, Prompt Engineering Playbook, CO-STAR, Power Automate, Plumber<br>
+<strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain <br>
 <strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs <br>
 <strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network) <br>
-<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance <br>
+<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework<br>
 <strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
-<strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium) <br>
+<strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br>
 <strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GeBiz <br>
 <!-- <strong>Certifications:</strong> CompTIA Security+, CRISC, CISSP -->
 </li>
@@ -497,6 +497,48 @@ PUB, Singapore's National Water Agency</a></span>
         </div>
       </div>
     </div>
+
+<!-- AI & Automation -->
+<div class="card">
+  <div class="card-content">
+    <h4 class="brown-text light">🤖 AI & Automation</h4>
+    <div class="row text-center">
+      <div class="col s4 m2"><img src="/assets/img/pairchat.png" class="responsive-img"><p>PairChat</p></div>
+      <div class="col s4 m2"><img src="/assets/img/aibots.png" class="responsive-img"><p>AiBots</p></div>
+     <div class="col s4 m2"><img src="/assets/img/plumber.png" class="responsive-img"><p>Plumber</p></div>
+ <div class="col s4 m2"><img src="/assets/img/power-automate.png" class="responsive-img"><p>Power Automate</p></div>
+     <div class="col s4 m2"><img src="/assets/img/leonardo.png" class="responsive-img"><p>Leonardo AI</p></div>
+     <div class="col s4 m2"><img src="/assets/img/elevenlabs.png" class="responsive-img"><p>ElevenLabs</p></div>
+    </div>
+  </div>
+</div>
+
+<!-- Data Analytics -->
+<div class="card">
+  <div class="card-content">
+    <h4 class="brown-text light">📈 Data Analytics</h4>
+    <div class="row text-center">
+      <div class="col s4 m2"><img src="/assets/img/qlik.png" class="responsive-img"><p>Qlik Sense</p></div>
+      <div class="col s4 m2"><img src="/assets/img/powerbi.png" class="responsive-img"><p>Power BI</p></div>
+      <div class="col s4 m2"><img src="/assets/img/tableau.png" class="responsive-img"><p>Tableau</p></div>
+    </div>
+  </div>
+</div>
+
+<!-- Big Data & Processing Frameworks -->
+<div class="card">
+  <div class="card-content">
+    <h4 class="brown-text light">🗄️ Big Data & Processing Frameworks</h4>
+    <div class="row text-center">
+      <div class="col s4 m2"><img src="/assets/img/mongodb.png" class="responsive-img"><p>MongoDB</p></div>
+      <div class="col s4 m2"><img src="/assets/img/hadoop.jpg" class="responsive-img"><p>Hadoop</p></div>
+      <div class="col s4 m2"><img src="/assets/img/hbase.png" class="responsive-img"><p>HBase</p></div>
+      <div class="col s4 m2"><img src="/assets/img/hive.png" class="responsive-img"><p>Hive</p></div>
+      <div class="col s4 m2"><img src="/assets/img/pig.png" class="responsive-img"><p>Pig</p></div>
+      <div class="col s4 m2"><img src="/assets/img/spark.png" class="responsive-img"><p>Spark</p></div>
+    </div>
+  </div>
+</div>
 
 <!-- Government Cloud -->
 <div class="card">
