--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ PUB, Singapore's National Water Agency</a></span>
         <div class="row text-center">
           <div class="col s4 m2"><img src="/assets/img/burp.png" class="responsive-img"><p>Burp Suite</p></div>
           <div class="col s4 m2"><img src="/assets/img/zap.jpg" class="responsive-img"><p>ZAP</p></div>
-      <div class="col s4 m2"><img src="/assets/img/sqlmap.jpg" class="responsive-img"><p>SQLMap</p></div>
+      <div class="col s4 m2"><img src="/assets/img/sqlmap.png" class="responsive-img"><p>SQLMap</p></div>
           <div class="col s4 m2"><img src="/assets/img/kali-gobuster.png" class="responsive-img"><p>Gobuster</p></div>
           <div class="col s4 m2"><img src="/assets/img/postman.png" class="responsive-img"><p>Postman</p></div>
           <div class="col s4 m2"><img src="/assets/img/beef.png" class="responsive-img"><p>BeEF</p></div>
