--- a/index.html
+++ b/index.html
@@ -477,8 +477,9 @@ PUB, Singapore's National Water Agency</a></span>
       <div class="card-content">
         <h4 class="brown-text light">💡 Threat Modeling & Frameworks</h4>
         <div class="row text-center">
-          <div class="col s4 m2"><img src="/assets/img/mitre.png" class="responsive-img"><p>MITRE ATT&CK</p></div>
+<div class="col s4 m2"><img src="/assets/img/ciatriad.png" class="responsive-img"><p>CIA Triad</p></div>
 <div class="col s4 m2"><img src="/assets/img/ckc.png" class="responsive-img"><p>Cyber Kill Chain</p></div>
+          <div class="col s4 m2"><img src="/assets/img/mitre.png" class="responsive-img"><p>MITRE ATT&CK</p></div>
           <div class="col s4 m2"><img src="/assets/img/nist.png" class="responsive-img"><p>NIST CSF</p></div>
           <div class="col s4 m2"><img src="/assets/img/owasp.png" class="responsive-img"><p>OWASP Top 10</p></div>
   <div class="col s4 m2"><img src="/assets/img/pop.jpg" class="responsive-img"><p>Pyramid of Pain</p></div>
