--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Automated weekly VMS reminders with Plumber tool and real-time remediation updates via Power Automate</li>
       <li>Created and maintained asset tags, whitelist rules, and severity recast configurations in GovTech VMS</li>
       <li>Monitored cyber health status by updating Digital Governance Platform (DGP) records and tracking treatment plans</li>
-      <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall to enable secure reachability to target environments</li>
+      <li>Raised requests to whitelist VAPT laptop IPs on the application gateway firewall and ensured tested connectivity and valid credentials to facilitate secure and seamless access for VAPT vendor</li>
       <li>Mentored junior staff and led training on cybersecurity practices and use of GenAI for workflow automation</li>
       <li>Tripled document analysis efficiency using CO-STAR framework and PairChat assistants to automate tasks such as email drafting, risk inquiries, and policy reviews</li>
       <li>Participated in purple team exercises; analyzed deployed TTPs and detections in Carbon Black EDR</li>
