add in standards pub exp

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ PUB, Singapore's National Water Agency</a></span>
 <strong>Threat Intelligence & Modeling:</strong> MITRE ATT&CK (ICS & Enterprise), CVSS Calculator, National Vulnerability Database (NVD), STRIDE-LM Threat Model, M3TID, PEAK Threat Hunting Framework, KC7, Pyramid of Pain <br>
 <strong>Log Analysis & Aggregation:</strong> SPLUNK, ELK Stack (Elasticsearch, Logstash, Kibana), Arkime, Windows Event Logs, Sysmon Logs <br>
 <strong>Security Assessment & Testing:</strong> Burp Suite, Wireshark, Nessus, zConsole, Kape, VirusTotal, SonarQube, VAPT (Mobile, Web, Cloud, Network) <br>
-<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, IM8 (Reform), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework<br>
+<strong>Standards & Frameworks:</strong> NIST Cybersecurity Framework, CIS Benchmarks, Instruction Manual for ICT&SS Management (IM8), IM8 (Reform), Application Infrastructure Architecture Standard (AIAS), Cybersecurity Code of Practice (CCoP), GoMAX Compliance, CSG Moderation Framework<br>
 <strong>OT & ICS Technologies:</strong> OT Architecture, Purdue Model, SCADA, HMI, PLC, Engineering Workstations, MITRE ICS Framework <br>
 <strong>Enterprise & Collaboration Tools:</strong> Microsoft Visio, Microsoft SharePoint (Webpage/Portal Building), Qlik Sense, (Excel, Powerpoint, Word), Risk Assessments, BIA Forms, Architecture Diagrams, VAPT Reports Reviews, Source Code Reviews, DRM Solutions (Vitrium), Padlet<br>
 <strong>Tender & Procurement:</strong> GovTech Bulk Tender, Call Bulk Tender, AOR, PO, GeBiz <br>
