--- a/index.html
+++ b/index.html
@@ -245,12 +245,13 @@ PUB, Singapore's National Water Agency</a></span>
              <ul>
       <li>Championed the development and implementation of PUB’s inaugural OT Cyber Supply Chain Risk Management policy; issued internal circular and designed an engaging awareness poster</li>
       <li>Created Vulnerability Management System SOP using workflows and flowcharts, improving operational efficiency by 50% and streamlining issue resolution for system managers</li>
-<li>Oversaw Vulnerability Management Systems and VAPT as Officer-in-Charge (OIC); ensured audit readiness and compliance by collecting and submitting required artefacts</li>
+<li>Oversaw Vulnerability Management Systems (VMS) and VAPT as Officer-in-Charge (OIC); ensured audit readiness and compliance by collecting and submitting required artefacts</li>
 <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
       <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
       <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
       <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender by creating Approval of Requirements (AOR) and raising Purchase Orders (PO); also managed contract extensions for GovTech Vulnerability Management System</li>
       <li>Coordinated and scheduled over 100+ VAPT exercises across IT and OT systems; ensured timely remediation and validation of findings within IM8 timelines</li>
+ <li>Engaged with VAPT vendors to deepen hands-on expertise in Burp Suite’s hybrid testing methods, strengthening VAPT capabilities as VAPT OIC</li>
 <li>Created admin accounts under Computer Management for VAPT vendors on VAPT laptops to conduct secure testing</li>
       <li>Reviewed system go-live documentation including Vulnerability Assessments (VA), Penetration Tests (PT), Risk Assessments (RA), Security Configuration Reviews (SCR), hardening guides, BIA forms, and architecture diagrams</li>
       <li>Revised OT network diagrams using the Purdue Model to ensure proper segmentation and enhance ICS defense-in-depth</li>
