update pub  exp

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ PUB, Singapore's National Water Agency</a></span>
       <li>Created Vulnerability Management System SOP using workflows and flowcharts, improving operational efficiency by 50% and streamlining issue resolution for system managers</li>
 <li>Oversaw Vulnerability Management Systems (VMS) and VAPT as Officer-in-Charge (OIC); ensured audit readiness and compliance by collecting and submitting required artefacts</li>
 <li>Conducted over 100 cybersecurity risk assessments and secured approvals for 300+ project go-live decisions</li>
+<li>Developed PairChat assistant bots to streamline responses to common queries about cybersecurity requirements for project specifications—including clauses on audit regimes, RTO/RPO, third-party compliance, offshoring, and more—doubling workflow efficiency</li>
       <li>Analyzed IPA files and mobile apps from Apple and Google Play Stores using the MTD (zConsole) portal and Zimperium technical reports to assess security risk severity and compliance with GoMAX standards</li>
       <li>Secured software installation approvals for Whole-of-Government laptops by conducting VirusTotal scans and security risk assessments</li>
       <li>Initiated and secured annual VAPT contract through GovTech Bulk Tender by creating Approval of Requirements (AOR) and raising Purchase Orders (PO); also managed contract extensions for GovTech Vulnerability Management System</li>
